// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ItemDetails /> no data = no details section 1`] = `null`;

exports[`<ItemDetails /> renders markdown 1`] = `
.c0 {
  margin-top: 0.5rem;
}

.c0 li {
  list-style-type: circle;
  list-style-position: inside;
}

<div
  class="c0"
  data-testid="sectionItemDetails"
>
  <ul>
    <li>
      a
    </li>
    <li>
      b
    </li>
    <li>
      c
    </li>
  </ul>
</div>
`;

exports[`<ItemDetails /> renders markdown 2`] = `
<div
  class="ItemDetails___StyledDiv-sc-1iyit4s-0 eVPfOY"
  data-testid="sectionItemDetails"
>
  <ul>
    <li>
      a
    </li>
    <li>
      b
    </li>
    <li>
      c
    </li>
  </ul>
</div>
`;
